# SearchEngine

./: CMakeLists.txt  README.md  catch.hpp  main.cpp
Indexer/: Indexer.cpp
Indexer/Article/: Article.cpp  Article.h
Indexer/Author/: Author.cpp  Author.h
Indexer/Index/: Index.cpp  Index.h
Indexer/Pair/: Pair.cpp  Pair.h
Indexer/Word/: Word.cpp  Word.h
QueryProcessor/: QueryProcessor.cpp  QueryProcessor.h
UserInterface/: UserInterface.cpp  UserInterface.h
Util/AVLTree/: AVLTree.h  AVLTree_test.cpp
Util/HashMap/: HashMap.h  HashMap_test.cpp
Util/HashSet/: HashSet.h  HashSet_test.cpp
